[package]
name = "lumos"
version = "0.1.0"
authors = ["Florian Büstgens <fb@fx-ttr.de>"]
edition = "2021"
build = "build.rs"

[dependencies]
bootloader = "0.10.12"
spin = "0.9.4"
volatile = "0.4.5"
x86_64 = "0.14.10"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
