[package]
name = "zen"
version = "0.0.1"
authors = ["Florian Büstgens <fb@fx-ttr.de>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[dependencies]
spin = "0.9.8"
volatile = "0.4.6"
bootloader = "0.11.3"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
