[package]
name = "hadron"
version = "0.0.2"
authors = ["Florian Marrero Liestmann <f.m.liestmann@fx-ttr.de>"]
edition = "2021"
build = "build.rs"

[dependencies.uio]
path = "../domains/uio"

[dependencies.exception]
path = "../domains/exception"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"