[package]
name = "hadron"
version = "0.0.2"
authors = ["Florian Marrero Liestmann <f.m.liestmann@fx-ttr.de>"]
edition = "2021"
build = "build.rs"

[dependencies]
lazy_static = "1.4.0"

[dependencies.uio]
path = "../domains/uio"

[dependencies.security]
path = "../domains/security"

[dependencies.gdt]
path = "../domains/gdt"

[dependencies.idt]
path = "../domains/idt"

[dependencies.exception]
path = "../domains/exception"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
