[package]
name = "gdt"
version = "0.1.0"
authors = ["Florian Marrero Liestmann <f.m.liestmann@fx-ttr.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[dependencies.cores]
path = "../cores"

[dependencies.security]
path = "../security"

[dependencies.x86_64]
path = "../../libs/x86_64"

[dependencies.uio]
path = "../uio"
