[package]
name = "uio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.8"
volatile = "0.4.6"
limine = "0.1.11"

[dependencies.exception]
path = "../exception"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]