[package]
name = "uio"
version = "0.1.0"
authors = ["Florian Marrero Liestmann <f.m.liestmann@fx-ttr.de>"]
edition = "2021"

[dependencies]
spin = "0.9.8"
volatile = "0.5.1"
limine = "0.1.11"

[dependencies.exception]
path = "../exception"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
